Add partitioning