@@ -3,26 +3,34 @@ package org.pak.messagebus.pg;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.pak.messagebus.core.*;
+import org.pak.messagebus.core.error.MissingPartitionException;
 import org.pak.messagebus.core.error.NonRetrayablePersistenceException;
+import org.pak.messagebus.core.error.RetrayablePersistenceException;
 import org.pak.messagebus.core.service.PersistenceService;
 import org.pak.messagebus.core.service.QueryService;
 import org.pak.messagebus.pg.jsonb.JsonbConverter;
 import org.postgresql.util.PGobject;
+import org.postgresql.util.PSQLException;
 
 import java.math.BigInteger;
+import java.sql.BatchUpdateException;
 import java.sql.SQLException;
-import java.time.Duration;
-import java.time.OffsetDateTime;
-import java.time.ZoneId;
+import java.time.*;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 
 @Slf4j
 public class PgQueryService implements QueryService {
+    private static final DateTimeFormatter dateFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+    private static final String MISSING_PARTITION_CODE = "23514";
     private final PersistenceService persistenceService;
     private final SchemaName schemaName;
     private final JsonbConverter jsonbConverter;
@@ -41,16 +49,37 @@ public class PgQueryService implements QueryService {
     public void initMessageTable(MessageName messageName) {
         var query = formatter.execute("""
                 CREATE TABLE IF NOT EXISTS ${schema}.${messageTable} (
-                    id BIGSERIAL PRIMARY KEY,
+                    id BIGSERIAL,
                     key TEXT,
                     created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
                     execute_after TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
-                    originated_at TIMESTAMP WITH TIME ZONE,
-                    payload JSONB NOT NULL);
+                    originated_at TIMESTAMP WITH TIME ZONE NOT NULL,
+                    payload JSONB NOT NULL,
+                    PRIMARY KEY (id, originated_at)
+                ) PARTITION BY RANGE (originated_at);
                                 
                 CREATE INDEX IF NOT EXISTS ${messageTable}_created_at_idx ON ${schema}.${messageTable}(created_at);
-                CREATE UNIQUE INDEX IF NOT EXISTS ${messageTable}_message_key_idx ON ${schema}.${messageTable}(key);
+                CREATE UNIQUE INDEX IF NOT EXISTS ${messageTable}_message_key_idx ON ${schema}.${messageTable}(originated_at, key);
                 """, Map.of("schema", schemaName.value(), "messageTable", messageTable(messageName)));
+
+        persistenceService.execute(query);
+    }
+
+    public void createPartition(String table, Instant dateTime) {
+        var date = dateTime.atOffset(ZoneOffset.UTC).toLocalDate();
+        var partition = table + "_" + dateFormatter.format(date).replace("-", "_");
+        log.info("Create partition {}", partition);
+
+        var query = formatter.execute("""
+                CREATE TABLE IF NOT EXISTS ${schema}.${partition}
+                PARTITION OF ${schema}.${table} FOR VALUES FROM ('${from}') TO ('${to}');
+                """, Map.of(
+                "schema", schemaName.value(),
+                "table", table,
+                "partition", partition,
+                "from", dateFormatter.format(date),
+                "to", dateFormatter.format(date.plus(1, ChronoUnit.DAYS))
+        ));
 
         persistenceService.execute(query);
     }
@@ -60,36 +89,43 @@ public class PgQueryService implements QueryService {
         var query = formatter.execute("""
                         CREATE TABLE IF NOT EXISTS ${schema}.${subscriptionTable} (
                             id BIGSERIAL PRIMARY KEY,
-                            message_id BIGINT NOT NULL REFERENCES ${messageTable}(id),
+                            message_id BIGINT NOT NULL,
                             attempt INTEGER NOT NULL DEFAULT 0,
                             error_message TEXT,
                             stack_trace TEXT,
                             created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
                             updated_at TIMESTAMP WITH TIME ZONE,
-                            execute_after TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP);
+                            originated_at TIMESTAMP WITH TIME ZONE NOT NULL,
+                            execute_after TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
+                            FOREIGN KEY (message_id, originated_at) REFERENCES ${schema}.${messageTable}(id, originated_at)
+                        );
                                                 
                         CREATE UNIQUE INDEX IF NOT EXISTS ${subscriptionTable}_message_id_idx ON ${schema}.${subscriptionTable}(message_id);
                         CREATE INDEX IF NOT EXISTS ${subscriptionTable}_created_at_idx ON ${schema}.${subscriptionTable}(created_at);
                         CREATE INDEX IF NOT EXISTS ${subscriptionTable}_execute_after_idx ON ${schema}.${subscriptionTable}(execute_after ASC);
                                                 
                         CREATE TABLE IF NOT EXISTS ${schema}.${subscriptionHistoryTable} (
-                            id BIGINT PRIMARY KEY,
-                            message_id BIGINT NOT NULL REFERENCES ${messageTable}(id),
+                            id BIGINT,
+                            message_id BIGINT NOT NULL,
                             attempt INTEGER NOT NULL DEFAULT 0,
                             status TEXT NOT NULL DEFAULT 'PROCESSED',
                             error_message TEXT,
                             stack_trace TEXT,
-                            created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP);
+                            created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
+                            originated_at TIMESTAMP WITH TIME ZONE NOT NULL,
+                            FOREIGN KEY (message_id, originated_at) REFERENCES ${schema}.${messageTable}(id, originated_at),
+                            PRIMARY KEY (id, originated_at)
+                        ) PARTITION BY RANGE (originated_at);
                             
-                        CREATE UNIQUE INDEX IF NOT EXISTS ${subscriptionHistoryTable}_message_id_idx ON ${schema}.${subscriptionHistoryTable}(message_id);
+                        CREATE UNIQUE INDEX IF NOT EXISTS ${subscriptionHistoryTable}_message_id_idx ON ${schema}.${subscriptionHistoryTable}(originated_at, message_id);
                         CREATE INDEX IF NOT EXISTS ${subscriptionHistoryTable}_created_at_idx ON ${schema}.${subscriptionHistoryTable}(created_at);
                                         
                         CREATE OR REPLACE FUNCTION ${schema}.${insertFunction}
                           RETURNS trigger AS
                         $$
                             BEGIN
-                            INSERT INTO ${schema}.${subscriptionTable}(message_id, created_at, execute_after)
-                                 VALUES(NEW.id, NEW.created_at, NEW.execute_after);
+                            INSERT INTO ${schema}.${subscriptionTable}(message_id, created_at, execute_after, originated_at)
+                                 VALUES(NEW.id, NEW.created_at, NEW.execute_after, NEW.originated_at);
                             RETURN NEW;
                             END;
                         $$
@@ -110,24 +146,36 @@ public class PgQueryService implements QueryService {
     }
 
     @Override
+    public void createMessagePartition(MessageName messageName, Instant dateTime) {
+        createPartition(messageTable(messageName), dateTime);
+    }
+
+    @Override
+    public void createHistoryPartition(SubscriptionName messageName, Instant dateTime) {
+        createPartition(subscriptionHistoryTable(messageName), dateTime);
+    }
+
+    @Override
     public <T> boolean insertMessage(MessageName messageName, Message<T> message) {
         var query = queryCache.computeIfAbsent("insertMessage|" + messageName.name(), k -> formatter.execute("""
                         INSERT INTO ${schema}.${messageTable} (created_at, execute_after, key, originated_at, payload)
-                        VALUES (CURRENT_TIMESTAMP,CURRENT_TIMESTAMP, ?, ?, ?) ON CONFLICT (key) DO NOTHING""",
+                        VALUES (CURRENT_TIMESTAMP,CURRENT_TIMESTAMP, ?, ?, ?)
+                        ON CONFLICT (key, originated_at) DO NOTHING""",
                 Map.of("schema", schemaName.value(), "messageTable", messageTable(messageName))));
 
-        return persistenceService.insert(query,
-                message.key(),
-                OffsetDateTime.ofInstant(message.originatedTime(), ZoneId.systemDefault()),
-                jsonbConverter.toPGObject(message.payload())) > 0;
-
+        return handleMissingPartition(() -> persistenceService.insert(query,
+                        message.key(),
+                        OffsetDateTime.ofInstant(message.originatedTime(), ZoneId.systemDefault()),
+                        jsonbConverter.toPGObject(message.payload())) > 0,
+                () -> List.of(message.originatedTime())
+        );
     }
 
     @Override
     public <T> List<Boolean> insertBatchMessage(MessageName messageName, List<Message<T>> messages) {
         var query = queryCache.computeIfAbsent("insertBatchMessage|" + messageName.name(), k -> formatter.execute("""
                         INSERT INTO ${schema}.${messageTable} (created_at, execute_after, key, originated_at, payload)
-                        VALUES (CURRENT_TIMESTAMP,CURRENT_TIMESTAMP, ?, ?, ?) ON CONFLICT (key) DO NOTHING""",
+                        VALUES (CURRENT_TIMESTAMP,CURRENT_TIMESTAMP, ?, ?, ?) ON CONFLICT (key, originated_at) DO NOTHING""",
                 Map.of("schema", schemaName.value(), "messageTable", messageTable(messageName))));
 
         var args = messages.stream()
@@ -136,7 +184,10 @@ public class PgQueryService implements QueryService {
                         jsonbConverter.toPGObject(t.payload())})
                 .toList();
 
-        return Arrays.stream(persistenceService.batchInsert(query, args)).mapToObj(i -> i > 0).toList();
+        var result = handleMissingPartition(() -> persistenceService.batchInsert(query, args),
+                () -> messages.stream().map(Message::originatedTime).collect(Collectors.toList()));
+
+        return Arrays.stream(result).mapToObj(i -> i > 0).toList();
     }
 
     @Override
@@ -165,14 +216,14 @@ public class PgQueryService implements QueryService {
                                 .orElse(null),
                         ofNullable(rs.getObject("created_at", OffsetDateTime.class)).map(OffsetDateTime::toInstant)
                                 .orElse(null),
-                        ofNullable(rs.getObject("originated_at", OffsetDateTime.class)).map(OffsetDateTime::toInstant)
-                                .orElse(null),
                         ofNullable(rs.getObject("updated_at", OffsetDateTime.class)).map(OffsetDateTime::toInstant)
+                                .orElse(null),
+                        ofNullable(rs.getObject("originated_at", OffsetDateTime.class)).map(OffsetDateTime::toInstant)
                                 .orElse(null),
                         jsonbConverter.toJsonb(rs.getObject("payload", PGobject.class)),
                         rs.getString("error_message"), rs.getString("stack_trace"));
             } catch (SQLException e) {
-                throw new NonRetrayablePersistenceException(e);
+                throw new NonRetrayablePersistenceException(e, e.getCause());
             }
         });
     }
@@ -201,15 +252,18 @@ public class PgQueryService implements QueryService {
         var query = queryCache.computeIfAbsent("failMessage|" + subscriptionName.name(), k -> formatter.execute("""
                         WITH deleted AS (DELETE FROM ${schema}.${subscriptionTable} WHERE id = ? RETURNING *)
                         INSERT INTO ${schema}.${subscriptionHistoryTable}
-                            (id, message_id, attempt, status, error_message, stack_trace)
-                            SELECT id, message_id, attempt, 'FAILED' as status, ?, ? FROM deleted""",
+                            (id, message_id, originated_at, attempt, status, error_message, stack_trace)
+                            SELECT id, message_id, originated_at, attempt, 'FAILED' as status, ?, ? FROM deleted""",
                 Map.of("schema", schemaName.value(), "subscriptionTable", subscriptionTable(subscriptionName),
                         "subscriptionHistoryTable", subscriptionHistoryTable(subscriptionName))));
 
         log.debug("failMessage query: {}", query);
 
-        var updated = persistenceService.update(query, messageContainer.getId(), e.getMessage(),
-                ExceptionUtils.getStackTrace(e));
+        var originatedTime = OffsetDateTime.ofInstant(messageContainer.getOriginatedTime(), ZoneId.systemDefault());
+
+        var updated = handleMissingPartition(
+                () -> persistenceService.update(query, messageContainer.getId(), e.getMessage(),
+                        ExceptionUtils.getStackTrace(e)), () -> List.of(messageContainer.getOriginatedTime()));
 
         assertNonEmptyUpdate(updated, query);
     }
@@ -220,12 +274,14 @@ public class PgQueryService implements QueryService {
         var query = queryCache.computeIfAbsent("completeMessage|" + subscriptionName.name(), k -> formatter.execute("""
                         WITH deleted AS (DELETE FROM ${schema}.${subscriptionTable} WHERE id = ? RETURNING *)
                         INSERT INTO ${schema}.${subscriptionHistoryTable}
-                            (id, message_id, attempt, status, error_message, stack_trace)
-                            SELECT id, message_id, attempt, 'PROCESSED' as status, error_message, stack_trace FROM deleted""",
+                            (id, message_id, originated_at, attempt, status, error_message, stack_trace)
+                            SELECT id, message_id, originated_at, attempt, 'PROCESSED' as status, error_message, stack_trace FROM deleted""",
                 Map.of("schema", schemaName.value(), "subscriptionTable", subscriptionTable(subscriptionName),
                         "subscriptionHistoryTable", subscriptionHistoryTable(subscriptionName))));
 
-        var updated = persistenceService.update(query, messageContainer.getId());
+        var updated = handleMissingPartition(
+                () -> persistenceService.update(query, messageContainer.getId()),
+                () -> List.of(messageContainer.getOriginatedTime()));
 
         assertNonEmptyUpdate(updated, query);
     }
@@ -245,6 +301,27 @@ public class PgQueryService implements QueryService {
     private void assertNonEmptyUpdate(int updated, String query) {
         if (updated == 0) {
             log.warn("No records were updated by query '{}'", query);
+        }
+    }
+
+    private <T> T handleMissingPartition(Supplier<T> operation, Supplier<List<Instant>> originationTimes) {
+        try {
+            return operation.get();
+        } catch (RetrayablePersistenceException e) {
+            if ((e.getOriginalCause().getClass().isAssignableFrom(PSQLException.class))
+                    && MISSING_PARTITION_CODE.equals(((SQLException) e.getOriginalCause()).getSQLState())) {
+                throw new MissingPartitionException(originationTimes.get());
+            } else if (e.getOriginalCause().getClass().isAssignableFrom(BatchUpdateException.class)) {
+                for (Throwable throwable : (BatchUpdateException) e.getOriginalCause()) {
+                    var sqlException = (SQLException) throwable;
+                    if (MISSING_PARTITION_CODE.equals(sqlException.getSQLState())) {
+                        throw new MissingPartitionException(originationTimes.get());
+                    }
+                }
+                throw e;
+            } else {
+                throw e;
+            }
         }
     }
 }
